# hedge-it

./: .gitignore  Readme.md
hedge-it/: README.md  pyproject.toml
hedge-it/src/hedge_it/: __main__.py  start.py
hedge-it/src/hedge_it/commons/: __init__.py  constants.py
hedge-it/src/hedge_it/commons/models/: cli_args.py
hedge-it/src/hedge_it/commons/utils/: arg_parser.py  batch_utils.py  custom_logger.py
hedge-it/src/hedge_it/connectors/: fetcher.py  session.py  ticker_history.py
hedge-it/src/hedge_it/dashboards/: exporter.py  index_board.py  metrics.py
hedge-it/src/hedge_it/extras/: index.py  scatch.ipynb
hedge-it/src/hedge_it/processor/: duck_db.py  queries.py  ticker_processor.py
